--- a/automaticwaterlevelcontroller.html
+++ b/automaticwaterlevelcontroller.html
@@ -102,7 +102,7 @@
     <section id="services" class="services section light-background">
 
       <div class="container section-title " style="padding-bottom: 0;">
-	  <h2>AQUA PRIDE</h2> <br>
+        <h2 class="heading">AQUA PRIDE</h2><sup class="rr">R</sup> <br>
         <h2>AUTOMATIC WATER LEVEL CONTROLLER</h2> <br>
         <div class="row gy-4">
 
