--- a/pressureboosterpumps.html
+++ b/pressureboosterpumps.html
@@ -107,7 +107,8 @@
 
         <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
           <div class="service-item1 item-cyan position-relative">
-            <center><img src="assets/img/products/Pressureboosterpump.png" class="img-fluid" alt="" style="height: 350px;">
+              
+            <center><img src="assets/img/products/year-logo.jpg" class="img-fluid" alt="" style="height: 350px;">
             </center>
           </div>
 
