--- a/pressureboosterpumps.html
+++ b/pressureboosterpumps.html
@@ -108,8 +108,10 @@
         <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
           <div class="service-item1 item-cyan position-relative">
               
-            <center><img src="assets/img/products/year-logo.jpg" class="img-fluid" alt="" style="height: 350px;">
+            <center><img src="assets/img/products/Pressureboosterpump.png" class="img-fluid" alt="" style="height: 350px;">
             </center>
+            <!-- <center><img src="assets/img/products/year-logo.jpg" class="img-fluid" alt="" style="height: 350px;">
+            </center> -->
           </div>
 
 
@@ -162,7 +164,8 @@
                 <li>Tank Sizes : 8 Ltrs - 450 Ltrs</li>              
              </div>
             <div class="col-4">
-            <img src="assets\images\dol.jpg"  class="style=height: 200px;"></div>
+              <center><img src="assets/img/products/year-logo.jpg" class="img-fluid" alt="" style="height: 350px;">
+              </center> </div>
           </div>
 
         </div>
