--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div> -->
             <h2>PRESSURE BOOSTER PUMPS</h2>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
-            <a href="pressureboosterpumps.html" class="btn-get-started">Read More</a>
+            <a href="pressureboosterpumps.html" class="btn-get-started" id="readmore">Read More</a>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -116,7 +116,7 @@
           <div class="container">
             <h2>OPENWELL SUBMERSIBLE PUMPS</h2>
            <!-- <p>Beatae vitae dicta sunt t voluptatem accusantium.</p> -->
-            <a href="domesticpumps.html" class="btn-get-started">Read More</a>
+            <a href="domesticpumps.html" class="btn-get-started"id="readmore">Read More</a>
           </div>
         </div><!-- End Carousel Item -->
 
