--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
           </div> -->
             <h2>PRESSURE BOOSTER PUMPS</h2>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
-            <a href="pressureboosterpumps.html" class="btn-get-started" id="readmore">Read More</a>
+            <a href="pressureboosterpumps.html"   class="btn-get-started">Read More</a>
           </div>
         </div><!-- End Carousel Item -->
 
-        <div class="carousel-item">
+        <div class="carousel-item" id="aqua">
           <img src="assets/images/img2.png" alt="" class="img_c">
           <div class="container">
-            <h2 class="heading">AQUA PRIDE</h2><sup class="r">R</sup>
+            <h2  class="heading" >AQUA PRIDE</h2><sup class="r">R</sup>
             <h3>AUTOMATIC WATER LEVEL CONTROLLER</h3>
             <a href="automaticwaterlevelcontroller.html" class="btn-get-started">Read More</a>
           </div>
@@ -116,7 +116,7 @@
           <div class="container">
             <h2>OPENWELL SUBMERSIBLE PUMPS</h2>
            <!-- <p>Beatae vitae dicta sunt t voluptatem accusantium.</p> -->
-            <a href="domesticpumps.html" class="btn-get-started"id="readmore">Read More</a>
+            <a href="domesticpumps.html"class="btn-get-started">Read More</a>
           </div>
         </div><!-- End Carousel Item -->
 
