--- a/contact.html
+++ b/contact.html
@@ -425,7 +425,7 @@
           };
 
           // Correct Service ID and Template ID here
-          emailjs.send("service_gptr167", "template_0f0xfmw", formData).then(
+          emailjs.send("service_82d6773", "template_jt543xd", formData).then(
             function (response) {
               alert("Message sent successfully!");
               document.getElementById("contact-form").reset();
