--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <div class="p-5 text-dark d-flex flex-column justify-content-center align-items-center" style="height:400px; background-color:#ADD8E6;">
             <a href="automaticwaterlevelcontroller.html" class="d-flex flex-column align-items-center">
               <img src="assets/gallery/silver.png" alt="Automatic Water Level Controller" style="max-height:250px; width:auto;">
-              <p class="mt-3 text-center"><b>AQUA PRIDE</b></p>
+              <p class="mt-3 text-center"><b>AQUA PRIDE</b><sup class=" round">R</sup></p>
               <p class="mt-3 text-center"><b>Automatic Water Level Controller</b></p>
             </a>
           </div>
