--- a/about.html
+++ b/about.html
@@ -130,7 +130,10 @@
   
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="testimonial-item">
-                <h2>What We Do</h2> 
+                <div class="about">
+
+                  <h2 class="inner-title">What we Do</h2>
+                </div>
                <p>
                  Our extensive & diverse range of
                  products has produced the right mix of flexibility and service which 
@@ -142,7 +145,10 @@
            
                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="testimonial-item">
-                <h2>Why Choose Us ?</h2> <br>  
+                  <div class="about">
+
+                    <h2 class="inner-title">Why Choose Us</h2>
+                  </div> <br>  
                 <ul>
                  <i class="bi bi-check-circle"></i> <span>24/7 Support</span><br>
                  <i class="bi bi-check-circle"></i> <span>Quality Material</span><br>
