--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>            
             <li><a href="clients.html">Clients</a></li>
-            <li><a href="\assets\brouchure\Olent Aqua document.pdf">Broucher</a></li>
+            <li><a href="/assets/brouchure/Olent Aqua document.pdf">Broucher</a></li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>        
@@ -680,14 +680,13 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename"><a href="index.html">Olent Aqua Devices (P) Ltd</a></strong> <span>All Rights Reserved.</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename"><a href="index.html" class="color">Olent Aqua Devices (P) Ltd</a></strong> <span>All Rights Reserved.</span></p>
       <div class="credits">
        
-        Designed by <a href="https://sites.google.com/view/mydigistudio"><strong>FRUITION GLOBS</strong></a> 
+        Designed by <a href="https://sites.google.com/view/mydigistudio"><strong class="color">FRUITION GLOBS</strong></a> 
       </div>
     </div>
 
-    
   </footer>
 
   <!-- Scroll Top -->
