--- a/automaticwaterlevelcontroller.html
+++ b/automaticwaterlevelcontroller.html
@@ -522,19 +522,12 @@
       </div>
 
       <div class="container copyright text-center mt-4">
-        <p>
-          © <span>Copyright</span>
-          <strong class="px-1 sitename"
-            ><a href="index.html">Olent Aqua Devices (P) Ltd</a></strong
-          >
-          <span>All Rights Reserved.</span>
-        </p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename"><a href="index.html" class="color">Olent Aqua Devices (P) Ltd</a></strong> <span>All Rights Reserved.</span></p>
         <div class="credits">
-          Designed by
-          <a href="https://sites.google.com/view/mydigistudio"
-            ><strong>FRUITION GLOBS</strong></a
-          >
+         
+          Designed by <a href="https://sites.google.com/view/mydigistudio"><strong class="color">FRUITION GLOBS</strong></a> 
         </div>
+      </div>
       </div>
     </footer>
     <!-- Scroll Top -->
