--- a/about.html
+++ b/about.html
@@ -130,9 +130,11 @@
             </div>
 
             <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-              <h2 class="inner-title">Our Company</h2>
+              <div class=" ">
+                <h2 class="aboutpage">About Us</h2>
+              </div>
               <div class="our-story">
-                <h3>About Us</h3>
+                <h3>Our Company</h3>
                 <p>
                   Olent Aqua Devices was established in 2015, we are specialized
                   in Advanced Automatic Water Level Controller, pressure booster
@@ -166,17 +168,18 @@
                 <div class="about">
                   <h2 class="inner-title">What we Do</h2>
                 </div>
-                <p>
+                <p class="mt-4">
                   Our extensive & diverse range of products has produced the
                   right mix of flexibility and service which has given us the
                   advantage and competitive edge that the market demands. With
-                  many Years’ experience of identifying acquiring and
+                  many Years’ experience of identifying  and
                   integrating into other businesses that complement our own we
                   have been able to cement good industry leadership within the
                   group.
                 </p>
               </div>
             </div>
+            <br />
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="testimonial-item">
@@ -213,7 +216,7 @@
       <!-- Team Section -->
       <section id="team" class="team section">
         <div class="container section-title">
-          <h2>Installations</h2>
+          <h2 class="installation">Installations</h2>
           <br />
           <div class="row gy-4" style="display: flex">
             <div
