--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </ul>
           </li>
           <!-- <li><a href="services.html">Services</a></li> -->
-          <li><a href="gallery.html">Gallery</a></li>
+          
           <li><a href="clients.html">Clients</a></li>
            <li><a href="/assets/brouchure\Olent Aqua document.pdf">Download</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -185,7 +185,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Our Products</h2>
+        <h2 class="portfolio">Our Products</h2>
       <p>The main objective of our firm is to satisfy the clients by providing them the utmost quality services & products </p>
       </div><!-- End Section Title -->
 
@@ -482,7 +482,7 @@
     <section id="services" class="services section light-background">
 
       <div class="container section-title">
-        <h2>Why Choose Us ?</h2> <br>
+        <h2 class="whychoose">Why Choose Us ?</h2> <br>
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
