--- a/automaticwaterlevelcontroller.html
+++ b/automaticwaterlevelcontroller.html
@@ -319,7 +319,7 @@
       <!-- Team Section -->
       <section id="team" class="team section">
         <div class="container section-title">
-          <h2>MODELS</h2>
+          <h2 class="model">MODELS</h2>
           <br />
           <div class="row gy-4" style="display: flex">
             <div
