--- a/pressureboosterpumps.html
+++ b/pressureboosterpumps.html
@@ -168,7 +168,7 @@
                   </div>
                   <div class="col-12 col-md-4">
                       <center>
-                          <img src="assets/img/products/year-logo.jpg" class="img-fluid" alt="" style="height: 350px;">
+                          <img src="assets/img/products/year-logo.jpg" class="img-fluid" alt="" style="height: 250px;">
                       </center>
                   </div>
               </div>
@@ -185,7 +185,7 @@
   <section id="team" class="team section">
     
     <div class="container section-title">
-      <h2>Applications</h2> <br>
+      <h2 class="application">Applications</h2> <br>
       <div class="row gy-4" style="display: flex;">
 
         <div class="col-lg-2 col-md-2 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
