--- a/pressureboosterpumps.html
+++ b/pressureboosterpumps.html
@@ -317,7 +317,7 @@
   <section id="team" class="team section section-title">
 
    <!-- <div class="container "> -->
-      <h2>MODELS</h2> <br>
+      <h2 class="model">MODELS</h2> <br>
       <div class="row gy-4" style="display: flex;">
 
         <div class="col-lg-4 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
