--- a/about.html
+++ b/about.html
@@ -160,11 +160,11 @@
         </div>
       </section>
 
-      <section id="testimonials" class="testimonials">
+      <section id="testimonials" class="testimonials" >
         <div class="container">
           <div class="row gy-4">
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <div class="testimonial-item">
+              <div class="testimonial-item" style="height: 35vh;">
                 <div class="about">
                   <h2 class="inner-title">What we Do</h2>
                 </div>
@@ -181,7 +181,7 @@
             </div>
             <br />
 
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100" style="margin-top: 60px;">
               <div class="testimonial-item">
                 <div class="about">
                   <h2 class="inner-title">Why Choose Us</h2>
