--- a/multistagepumps.html
+++ b/multistagepumps.html
@@ -150,7 +150,7 @@
      <section id="team" class="team section">
 
      <div class="container section-title" style="padding-bottom: 0;">
-      <h2>MODELS</h2> <br>
+      <h2 class="model">MODELS</h2> <br>
       <div class="row gy-4" style="display: flex;">
 
         <div class="row gy-4">
