--- a/openwellsubmersiblepumps.html
+++ b/openwellsubmersiblepumps.html
@@ -207,7 +207,7 @@
      <section id="team" class="team section">
       
       <div class="container section-title">
-        <h2>MODELS</h2> <br>
+        <h2 class="model">MODELS</h2> <br>
         <div class="row gy-4" style="display: flex;">
 
           <div class="col-lg-4 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
