--- a/pressuretankandaccessories.html
+++ b/pressuretankandaccessories.html
@@ -194,7 +194,7 @@
      <!-- Team Section -->
      <section id="team" class="team section">      
       <div class="container section-title">
-        <h2>MODELS</h2>
+        <h2 class="model">MODELS</h2>
         <div class="row gy-4" style="display: flex;">
 
           <div class="col-lg-4 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
