--- a/about.html
+++ b/about.html
@@ -160,11 +160,11 @@
         </div>
       </section>
 
-      <section id="testimonials" class="testimonials" >
+      <section id="testimonials" class="testimonials">
         <div class="container">
           <div class="row gy-4">
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <div class="testimonial-item" style="height: 35vh;">
+              <div class="testimonial-item" style="height: 35vh">
                 <div class="about">
                   <h2 class="inner-title">What we Do</h2>
                 </div>
@@ -172,16 +172,15 @@
                   Our extensive & diverse range of products has produced the
                   right mix of flexibility and service which has given us the
                   advantage and competitive edge that the market demands. With
-                  many Years’ experience of identifying  and
-                  integrating into other businesses that complement our own we
-                  have been able to cement good industry leadership within the
-                  group.
+                  many Years’ experience of identifying and integrating into
+                  other businesses that complement our own we have been able to
+                  cement good industry leadership within the group.
                 </p>
               </div>
             </div>
             <br />
 
-            <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100" style="margin-top: 60px;">
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="testimonial-item">
                 <div class="about">
                   <h2 class="inner-title">Why Choose Us</h2>
