--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
         <div class="container">
           <div class="row gy-4">
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <div class="testimonial-item" style="height: 35vh">
+              <div class="testimonial-item">
                 <div class="about">
                   <h2 class="inner-title">What we Do</h2>
                 </div>
