--- a/about.html
+++ b/about.html
@@ -223,7 +223,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a1.jpeg"
@@ -241,7 +241,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a2.jpeg"
@@ -259,7 +259,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a3.jpeg"
@@ -277,7 +277,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a14.jpeg"
@@ -295,7 +295,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a5.jpeg"
@@ -313,7 +313,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a6.jpeg"
@@ -331,7 +331,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a7.jpeg"
@@ -349,7 +349,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a17.jpeg"
@@ -367,7 +367,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a9.jpeg"
@@ -385,7 +385,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a10.jpeg"
@@ -403,7 +403,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\a13.jpeg"
@@ -421,7 +421,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <div class="team-member" style="flex: 1">
+              <div  style="flex: 1">
                 <div class="member-img">
                   <img
                     src="assets\img\about\tank.jpg"
