--- a/index.html
+++ b/index.html
@@ -323,8 +323,17 @@
             <img src="assets/gallery/silver.png" alt="Automatic Water Level Controller" style="max-height:250px; width:auto;">
           </div>
           <div class="text-center mt-auto">
-            <p class="mb-0"><b>AQUA PRIDE</b><sup class="rounds">R</sup></p>
-            <p class="mb-0"><b>Automatic Water Level Controller</b></p>
+            <a href="#" class="link">
+              <p>
+                <b>AQUA PRIDE<sup class="rounds">R</sup></b>
+                <br>
+                <b>Automatic Water Level Controller</b>
+              </p>
+            </a>
+            
+            <!-- <p class="mb-0"><b>AQUA PRIDE<sup class="rounds">R</sup>
+            </b></p>
+            <p class="mb-0"><b>Automatic Water Level Controller</b></p> -->
           </div>
         </a>
       </div>
